# FunPy

./: _config.yml  ch3.py  ch4.py  index.md  pyproject.toml
_includes/: footer.html
_layout/: base.html
_layouts/: base.html
_posts/: 2024-05-21-ch01.md  2024-05-22-ch02.md  2024-05-24-intro.md  2024-05-25-ch01.md  2024-05-25-intro.md  ds_ex2.py
ch02/: ds_ex1.py  ds_ex2.py  ds_ex3.py  nlp_ex1.py
ch03/: ds_ex1.py  ds_ex2.py
data/: apple.txt  sort_long_text.txt
