[tool.poetry]
name = "funpy"
version = "0.1.0"
description = "Functional Python Programming"
authors = ["oceanumeric <numerical.ocean@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
